--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,13 +3,33 @@
     flex-direction: column;
     align-items: center;
     width: 60%;
+    margin-top: 80px;
     padding: 20px;
-    border: 1px solid #000000;
+    background-color: #727272;
+    color: #ffffff;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
   }
   .Formulario input{
     width: 80%;
     margin: 5px;
   }
   .Formulario :nth-child(4){
-    width: 30%;
+    width: 20%;
+    background-color: #095385b6;
+    color: #ffffff;
+    font-weight: bold;
+    padding: 5px;
+    border: none;
+  }
+  .Formulario :nth-child(4):hover{
+    transform: scale(1.2);
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  .inputrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    width: 60%;
   }
